assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

/* Asterisk wildcard selector to override default styles added by the browser */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

/* General Styles */

body {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  min-height: 100vh;
  background: #f1f1f1;
  /* Generic project styles */
  /* color: #3a3a3a; */
  font-family: "Roboto", sans-serif;
}
a {
  text-decoration: none;
}
h2 {
  color: #f1f1f1;
}

/* Header */
header {
  background: #f1f1f1;
  position: fixed;
  z-index: 99;
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
  top: 0;
  gap: 10px;
}

header a {
  text-decoration: none;
  color: inherit;
}

#navigation {
  list-style: none;
  display: flex;
  justify-content: center;
  gap: 5px;
  margin-bottom: 5px;
}

.nav-l {
  margin-left: 8px;
  font-weight: 500;
  border-right: 2px solid #6d6875;
  padding-right: 6px;
}
.nav-s {
  margin-left: 8px;
  font-weight: 500;
}

#favicon-if {
  display: none;
}

.active {
  color: #6d6875;
}

/* Dropdown menu */
nav {
  /* background-color: lightblue; */
  width: 100%;
  box-shadow: 0 2px 2px #3a3a3a;
  display: none;
}

/* Nav toggle /// Same code used as in Love-Runner example project*/
#nav-toggle:checked ~ nav {
  display: block;
}
#nav-toggle {
  display: none;
}
.nav-toggle-label {
  font-size: 2rem;
}

/* Main content */
main {
  /* background-color: lightgreen; */
  /* background-color: #6b9ac4; */
  flex: 1 0 auto;
  margin-top: 65px;
  overflow-y: auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  gap: 5px;
}

#hero {
  background: url("../images/hero.jpg") no-repeat center center/cover;
  height: 517px;
  width: 100%;
  position: relative;
}

#intro {
  position: absolute;
  height: auto;
  width: 80%;
  background-color: lightcoral;
  text-align: center;
  padding-inline: 10px;
  opacity: 0.85;
  bottom: 0;
  right: 0;
}

/* Experiences Section */

#experiences {
  display: flex;
  flex-wrap: wrap;
  gap: 5px;
}

#experiences div {
  height: 100px;
  width: 100%;
  position: relative;
}

.my-img{
  height: 100%;
  width: 100%;
  object-fit: cover;
  opacity: 0.7;
}


/* Footer */
footer {
  background: #393e46;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

#about {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 5px 5px 5px 5px;
  gap: 2px;
  width: 100%;
  align-items: center;
}

#footer-icons {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 5px 5px 5px 5px;
  gap: 10px;
  width: 100%;
  align-items: center;
}
#footer-icons > h4 {
  color: #f1f1f1;
  width: 100%;
  text-align: center;
}
#footer-icons > a {
  color: #f1f1f1;
}

#about > a {
  text-decoration: none;
  color: #f1f1f1;
}

/* Media Query for tablet size */
@media screen and (min-width: 768px) {
  header {
    justify-content: space-between;
  }
  header > a {
    padding-left: 10px;
    font-size: 120%;
  }
  #favicon-if {
    display: inline;
  }
  #navigation {
    margin-bottom: 0;
  }
  nav {
    display: block;
    box-shadow: none;
    width: fit-content; /* Key to get nav to the right*/
    padding-right: 15px;
    font-size: 120%;
  }

  .nav-toggle-label {
    display: none;
  }
  /* Main styles for after */
  main {
    margin-top: 45px;
  }

  /* footer for tablets and -- desktops?*/
  #about {
    justify-content: flex-start;
    font-size: 120%;
  }

  #footer-icons {
    justify-content: flex-end;
    padding-right: 20px;
    font-size: 120%;
  }
  #footer-icons > h4 {
    text-align: end;
  }

  .footer {
    border-right: 1px solid #f1f1f1;
    padding-right: 10px;
  }
}

